--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/vite": "^4.0.4",
     "@types/chrome": "^0.0.280",
     "autoprefixer": "^10.4.20",
     "prettier-svg-tidy": "link:../prettier-svg-tidy",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.4",
     "typescript": "^5.6.3",
     "wxt": "^0.19.13"
   },
