--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "postinstall": "wxt prepare"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/vite": "^4.1.7",
     "@types/chrome": "^0.0.280",
-    "autoprefixer": "^10.4.20",
     "prettier-svg-tidy": "link:../prettier-svg-tidy",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5.6.3",
-    "wxt": "^0.19.13"
+    "wxt": "^0.20.6"
   },
   "dependencies": {
     "diff": "^7.0.0",
